--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "moralis": "^1.8.0",
+    "next": "^12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-moralis": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
