--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-moralis": "^1.4.0"
+    "react-moralis": "^1.4.0",
+    "timeago-react": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
