--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_APP_ID=8mU2a5HTy10G2hfdA3PlyGaOBqoM3WM1lLfbvmxO
-NEXT_PUBLIC_SERVER_URL=https://0b9ej8w8otsn.usemoralis.com:2053/server
+NEXT_PUBLIC_APP_ID='8mU2a5HTy10G2hfdA3PlyGaOBqoM3WM1lLfbvmxO'
+NEXT_PUBLIC_SERVER_URL='https://0b9ej8w8otsn.usemoralis.com:2053/server'
